--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.javatuples</groupId>
+            <artifactId>javatuples</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>    
     <build>
         <plugins>
